[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/sprites/weapons/bullet.png" type="Texture" id=1]
[ext_resource path="res://assets/shaders/uporabljam-zapakirano/bolt_shield_texture.gdshader" type="Shader" id=2]
[ext_resource path="res://assets/sprites/bolt/bolt.png" type="Texture" id=3]
[ext_resource path="res://assets/shaders/uporabljam-zapakirano/bolt_wiggle_texture.gdshader" type="Shader" id=4]
[ext_resource path="res://_rezerva/bolti_orig_pred_uporabo_classov/Enemy_00.gd" type="Script" id=5]

[sub_resource type="CircleShape2D" id=545]
radius = 12.0

[sub_resource type="ShaderMaterial" id=549]
resource_local_to_scene = true
shader = ExtResource( 2 )
shader_param/noise_intensity = 1.0
shader_param/noise_layers = 5
shader_param/noise_speed = 2.0
shader_param/inverse_output = false
shader_param/colorize = Color( 1, 1, 1, 1 )
shader_param/color_to_cut = Color( 1, 1, 1, 1 )
shader_param/color_intensity = 1.0
shader_param/texture_size = Vector2( 32, 32 )

[sub_resource type="OpenSimplexNoise" id=546]
seed = 4
period = 5.8
persistence = 0.857
lacunarity = 0.39

[sub_resource type="NoiseTexture" id=547]
width = 32
height = 32
seamless = true
bump_strength = 13.9
noise = SubResource( 546 )

[sub_resource type="OpenSimplexNoise" id=523]
seed = 1
octaves = 4
period = 90.5
persistence = 0.354
lacunarity = 3.58

[sub_resource type="NoiseTexture" id=524]
width = 9
height = 9
seamless = true
noise = SubResource( 523 )

[sub_resource type="ShaderMaterial" id=525]
shader = ExtResource( 4 )
shader_param/noise_factor = 0.0
shader_param/speed = 0.0
shader_param/noise_texture = SubResource( 524 )

[sub_resource type="Animation" id=535]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:material:shader_param/noise_intensity")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[sub_resource type="Animation" id=536]
resource_name = "shield_on"
length = 2.0
step = 0.05
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1.05, -0.6, 0, 0.2, 0, 1.05, -0.6, 0, 0.2, 0, 0.9, -0.2, 0, 0.2, 0, 1, -0.2, 0, 0.2, 0 ),
"times": PoolRealArray( 0, 0.8, 1.4, 2 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1.05083, -0.6, 0, 0.2, 0, 1.05083, -0.6, 0, 0.2, 0, 0.9, -0.2, 0, 0.2, 0, 1, -0.2, 0, 0.2, 0 ),
"times": PoolRealArray( 0, 0.8, 1.4, 2 )
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:material:shader_param/noise_intensity")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.15, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 1.0 ]
}

[sub_resource type="Animation" id=537]
resource_name = "shielding"
length = 1.2
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, 0, 0, 0.2, 0, 0.9, -0.2, 0, 0.2, 0, 1, -0.2, 0, 0.2, 0 ),
"times": PoolRealArray( 0, 0.6, 1.2 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1.005, -0.2, 0, 0.2, 0, 0.9, -0.2, 0, 0.2, 0, 1, -0.2, 0, 0.2, 0 ),
"times": PoolRealArray( 0, 0.6, 1.2 )
}

[node name="Enemy_00" type="KinematicBody2D"]
position = Vector2( 498, 113 )
rotation = 3.14159
script = ExtResource( 5 )

[node name="BoltCollision" type="CollisionPolygon2D" parent="."]
position = Vector2( -0.5, 0.5 )
rotation = 1.57079
polygon = PoolVector2Array( -1.99997, -4.00001, -5, -3.13719e-05, -5.00001, 1.99997, -4.00002, 2.99997, 2.99998, 3.00002, 3.99999, 2.00003, 4, 2.50975e-05, 1.00003, -3.99999 )

[node name="ShieldCollision" type="CollisionShape2D" parent="."]
shape = SubResource( 545 )

[node name="Shield" type="Sprite" parent="."]
material = SubResource( 549 )
texture = SubResource( 547 )

[node name="Bolt" type="Sprite" parent="."]
material = SubResource( 525 )
position = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="FrontEnginePositionL" type="Position2D" parent="Bolt"]
visible = false
position = Vector2( 1.99999, -4.00001 )
__meta__ = {
"_gizmo_extents_": 2.0
}

[node name="FrontEnginePositionR" type="Position2D" parent="Bolt"]
visible = false
position = Vector2( 2.00001, 2.99999 )
__meta__ = {
"_gizmo_extents_": 2.0
}

[node name="RearEnginePosition" type="Position2D" parent="Bolt"]
visible = false
position = Vector2( -4, -0.499986 )
__meta__ = {
"_gizmo_extents_": 2.0
}

[node name="indikator" type="Sprite" parent="Bolt/RearEnginePosition"]
modulate = Color( 0, 0.811765, 1, 1 )
position = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="TrailPosition" type="Position2D" parent="Bolt"]
visible = false
position = Vector2( -2, -0.499993 )
__meta__ = {
"_gizmo_extents_": 2.0
}

[node name="GunPosition" type="Position2D" parent="Bolt"]
visible = false
position = Vector2( 2.5, -0.5 )
__meta__ = {
"_edit_group_": true,
"_gizmo_extents_": 2.0
}

[node name="indikator" type="Sprite" parent="Bolt/GunPosition"]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Shield")
anims/RESET = SubResource( 535 )
anims/shield_on = SubResource( 536 )
anims/shielding = SubResource( 537 )

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_max_distance = 100.0

[node name="VisionFront" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 50, 0 )

[node name="VisionRear" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -50, 0 )

[node name="VisionLeft" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 10, -40 )

[node name="VisionRight" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 10, 40 )

[node name="EnergyPoly" type="Polygon2D" parent="."]
position = Vector2( -3.5, 0 )
color = Color( 0.847059, 0.0235294, 0.0235294, 1 )
polygon = PoolVector2Array( 0.5, 0, 0.5, 1, 6.5, 1, 6.5, 0 )

[node name="SeekRay" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 90, 0 )

[node name="SeekRayL1" type="RayCast2D" parent="."]
visible = false
cast_to = Vector2( 90, -10 )

[node name="SeekRayL2" type="RayCast2D" parent="."]
visible = false
cast_to = Vector2( 90, -20 )

[node name="SeekRayR1" type="RayCast2D" parent="."]
visible = false
cast_to = Vector2( 90, 10 )

[node name="SeekRayR2" type="RayCast2D" parent="."]
visible = false
cast_to = Vector2( 90, 20 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_shield_animation_finished"]
[connection signal="path_changed" from="NavigationAgent2D" to="." method="_on_NavigationAgent2D_path_changed"]
[connection signal="velocity_computed" from="NavigationAgent2D" to="." method="_on_NavigationAgent2D_velocity_computed"]
